# invest-ucm-calibration

./: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  environment.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  repo.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
docs/: Makefile  api.md  cli.md  conf.py  environment.yml  index.md  installation.md  usage.md
docs/src/: api.rst  cli.rst  conf.py  index.rst  user-guide.rst
invest_ucm_calibration/: __init__.py  settings.py
invest_ucm_calibration/cli/: main.py
tests/: _generate_test_data.py  test_invest_ucm_calibration.py
tests/data/: T0.tif  T1.tif  _T0.tif  _T1.tif  aoi-vector.dbf  aoi-vector.shp  aoi.gpkg  biophysical-table.csv  lulc.tif  ref_et0.tif  ref_et1.tif  station-locations.csv  station-t-one-day.csv  station-t.csv
