[tool]
[tool.poetry]
name = "invest_ucm_calibration"
version = "0.5.0"
homepage = "https://github.com/martibosch/invest_ucm_calibration"
description = "Automated calibration of the InVEST urban cooling model with simulated annealing."
authors = ["Martí Bosch <marti.bosch@epfl.ch>"]
readme = "README.md"
license =  "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "invest_ucm_calibration" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
black  = { version = "^22.3.0", optional = true}
isort  = { version = "5.10.1", optional = true}
flake8  = { version = "4.0.1", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "^7.0.1", optional = true}
pytest-cov  = { version = "^3.0.0", optional = true}
tox  = { version = "^3.24.5", optional = true}
virtualenv  = { version = "^20.13.1", optional = true}
pip  = { version = "^22.0.3", optional = true}
twine  = { version = "^3.8.0", optional = true}
pre-commit = {version = "^2.17.0", optional = true}
toml = {version = "^0.10.2", optional = true}
livereload = {version = "^2.6.3", optional = true}
pyreadline = {version = "^2.1", optional = true}
sphinx = {version = "^5.3.0", optional = true}
sphinx-click = {version = "^4.4.0", optional = true}
myst-parser = {version = "^0.18.1", optional = true}
dask = {extras = ["delayed"], version = "^2022.12.0"}
fiona = "^1.8.22"
natcap-invest = ">=3.10.1"
scikit-learn = "^1.2.0"
xarray = "^2022.12.0"
rasterio = "^1.3.4"
simanneal = "^0.5.0"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml"]

doc = [
    "sphinx", "sphinx-click", "myst-parser"
    ]

[tool.poetry.scripts]
invest-ucm-calibration = 'invest_ucm_calibration.cli.main:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
