[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["B", "C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "F403", "F401"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/test_invest_ucm_calibration.py" = ["D"]

[tool.ruff.isort]
known-first-party = ["invest_ucm_calibration"]

[tool.ruff.pydocstyle]
convention = "numpy"
